--- a/package.json
+++ b/package.json
@@ -56,14 +56,24 @@
     "configPath": "tests/dummy/config"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.5",
     "broccoli-funnel": "^1.0.1",
     "broccoli-merge-trees": "^1.1.1",
     "broccoli-writer": "^0.1.1",
+    "ember-cli": "^1.13.15",
+    "ember-cli-babel": "^5.1.5",
+    "ember-cli-content-security-policy": "^0.4.0",
+    "ember-cli-ic-ajax": "^0.2.4",
+    "ember-cli-preprocess-registry": "^1.1.0",
+    "ember-cli-sri": "^1.2.1",
+    "ember-cli-version-checker": "^1.1.6",
+    "ember-data": "^1.13.15",
+    "ember-try": "0.0.8",
+    "expect.js": "^0.3.1",
+    "express": "^4.13.4",
+    "glob": "^4.5.3",
+    "mocha": "^2.4.5",
     "postcss": "^5.0.14",
     "postcss-selector-namespace": "^1.0.5",
-    "ember-cli-preprocess-registry": "^1.1.0",
-    "ember-cli-version-checker": "^1.1.5",
     "symlink-or-copy": "^1.0.1",
     "walk-sync": "^0.2.6"
   }
